# build-system

./: CMakeLists.txt  README.md  availableLibs.txt  libFK.cc  main.cc  progressBar.cc  progressBar.hh  src.cc  src.hh
libraryBuildFlags/: 3.txt  4.txt
libraryBuildScripts/: 1.sh  2.sh  3.sh  4.sh
res/libraryBuildScripts/: 4.sh
src/: availableLibs.txt  main.cc  src.cc
src/libraryBuildFlags/: 1.txt
